--- a/_includes/head.html
+++ b/_includes/head.html
@@ -58,10 +58,10 @@
 	<![endif]--> 
 
 	<!-- Favicon and Apple touch icons -->
-	<link rel="shortcut icon" href="{{ site.baseurl }}/images/favicons/favicon.ico">
+<!-- 	<link rel="shortcut icon" href="{{ site.baseurl }}/images/favicons/favicon.ico">
 	<link rel="apple-touch-icon" href="{{ site.baseurl }}/images/favicons/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="{{ site.baseurl }}/images/favicons/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="{{ site.baseurl }}/images/favicons/apple-touch-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="{{ site.baseurl }}/images/favicons/apple-touch-icon-114x114.png"> -->
 
 </head>
 {% if page.layout == "project" %}
