--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,7 +35,7 @@
 
 	<!-- Fonts-->
 	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	{% if page.url == "/portfolio/balticwall" %}
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:700,400&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	{% endif %} 
