--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,5 +1,5 @@
 	<!-- Scripts-->
-	<script src="{{ site.baseurl }}/js/lib/jquery-1.10.2.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script> 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/fluidbox/1.4.3.1/jquery.fluidbox.min.js"></script>
 	<script src="{{ site.baseurl }}/js/scripts.js"></script>
 	<script>
