Remove trailing slashes in urls

--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,4 +1,4 @@
-{% if page.url == "/bio/" %}
+{% if page.url == "/bio" %}
 	<div class="page-width bio-bg-img">
 		<div class="small-12">
 {% endif %}
