--- a/_includes/head.html
+++ b/_includes/head.html
@@ -56,6 +56,18 @@
 	<script src="js/lib/respond.min.js"></script>
 	<noscript><link rel="stylesheet" href="[fallback css]" /></noscript>
 	<![endif]-->
+	
+	<!-- Hotjar Tracking Code for http://martinsmihailovs.com/ -->
+	<script>
+	    (function(h,o,t,j,a,r){
+		h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+		h._hjSettings={hjid:1548263,hjsv:6};
+		a=o.getElementsByTagName('head')[0];
+		r=o.createElement('script');r.async=1;
+		r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+		a.appendChild(r);
+	    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+	</script>
 </head>
 {% if page.layout == "project" %}
 <body class="project project-{{ page.title | strip_html | downcase | replace: " ", "-" | replace: '.', '-' | replace: ",", "" | replace: 'ē', 'e' | replace: 'ā', 'a' | replace: 'ī', 'i' | replace: 'š', 's' | replace: 'ņ', 'n' | replace: 'ļ', 'l' }}">
